log/build_2024-12-26_21-05-45/practica1/stdout_stderr.log
running egg_info
writing build/practica1/practica1.egg-info/PKG-INFO
writing dependency_links to build/practica1/practica1.egg-info/dependency_links.txt
writing entry points to build/practica1/practica1.egg-info/entry_points.txt
writing requirements to build/practica1/practica1.egg-info/requires.txt
writing top-level names to build/practica1/practica1.egg-info/top_level.txt
reading manifest file 'build/practica1/practica1.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file 'build/practica1/practica1.egg-info/SOURCES.txt'
running build
running build_py
copying practica1/obstacle_avoider.py -> /home/pablo/ros_ws/src/practica1/build/practica1/build/lib/practica1
running install
running install_lib
copying /home/pablo/ros_ws/src/practica1/build/practica1/build/lib/practica1/obstacle_avoider.py -> /home/pablo/ros_ws/src/practica1/install/practica1/lib/python3.12/site-packages/practica1
byte-compiling /home/pablo/ros_ws/src/practica1/install/practica1/lib/python3.12/site-packages/practica1/obstacle_avoider.py to obstacle_avoider.cpython-312.pyc
  File "/home/pablo/ros_ws/src/practica1/install/practica1/lib/python3.12/site-packages/practica1/obstacle_avoider.py", line 31
    else
        ^
SyntaxError: expected ':'

running install_data
running install_egg_info
removing '/home/pablo/ros_ws/src/practica1/install/practica1/lib/python3.12/site-packages/practica1-0.0.0-py3.12.egg-info' (and everything under it)
Copying build/practica1/practica1.egg-info to /home/pablo/ros_ws/src/practica1/install/practica1/lib/python3.12/site-packages/practica1-0.0.0-py3.12.egg-info
running install_scripts
Installing my_robot_driver script to /home/pablo/ros_ws/src/practica1/install/practica1/lib/practica1
Installing obstacle_avoider script to /home/pablo/ros_ws/src/practica1/install/practica1/lib/practica1
writing list of installed files to '/home/pablo/ros_ws/src/practica1/build/practica1/install.log'
